--- a/deploy/build.xml
+++ b/deploy/build.xml
@@ -5,40 +5,14 @@
         <delete file="bin/smwhalo-usermanual-${version}.zip" />
         <mkdir dir="bin/zip" />
 
-    	<copy todir="bin/zip/extensions/SMWUserManual/includes">
-            <fileset dir="../includes/">
-                <exclude name="**/.svn, **/CVS" />
-            </fileset>
-        </copy>
-        <copy todir="bin/zip/extensions/SMWUserManual/languages">
-            <fileset dir="../languages/">
-                <exclude name="**/.svn, **/CVS" />
-            </fileset>
-        </copy>
-        <copy todir="bin/zip/extensions/SMWUserManual/maintenance">
-            <fileset dir="../maintenance/">
-                <exclude name="**/.svn, **/CVS" />
-            </fileset>
-        </copy>
-        <copy todir="bin/zip/extensions/SMWUserManual/scripts">
-            <fileset dir="../scripts/">
-                <exclude name="**/.svn, **/CVS" />
-            </fileset>
-        </copy>
-        <copy todir="bin/zip/extensions/SMWUserManual/scripts/languages">
-            <fileset dir="../scripts/languages/">
-                <exclude name="**/.svn, **/CVS" />
-            </fileset>
-        </copy>
-        <copy todir="bin/zip/extensions/SMWUserManual/skins">
-            <fileset dir="../skins/">
-                <exclude name="**/.svn, **/CVS" />
-            </fileset>
-        </copy>
         <copy todir="bin/zip/extensions/SMWUserManual">
             <fileset file="../*">
+            	<include name="**/*" />
                 <exclude name="**/.svn, **/CVS" />
                 <exclude name="**/*deploy*" />
+            	<exclude name="**/deploy/" />
+            	<exclude name="**/comment.php" />
+            	<exclude name="**/commentdata/" />
             </fileset>
         </copy>
 
