update build process

--- a/deploy/build.xml
+++ b/deploy/build.xml
@@ -1,27 +1,39 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
 <project basedir="." default="build" name="SMWUserManual">
-    <target name="build">
-        <delete dir="bin/zip" />
-        <delete file="bin/smwhalo-usermanual-${version}.zip" />
-        <mkdir dir="bin/zip" />
+	<target name="build" depends="versionhint">
+		<delete dir="bin/zip" />
+		<delete>
+			<fileset dir="bin" includes="smwhalo-usermanual*.zip" />
+		</delete>
+		<mkdir dir="bin/zip" />
 
-        <copy todir="bin/zip/extensions/SMWUserManual">
-            <fileset file="../*">
-            	<include name="**/*" />
-                <exclude name="**/.svn, **/CVS" />
-            	<exclude name="**/deploy/" />
-            	<exclude name="**/comment.php" />
-            	<exclude name="**/commentdata/" />
-            </fileset>
-        </copy>
+		<copy todir="bin/zip/extensions/SMWUserManual">
+			<fileset file="../*">
+				<include name="**/*" />
+				<exclude name="**/.svn, **/CVS" />
+				<exclude name="**/deploy/" />
+				<exclude name="**/comment.php" />
+				<exclude name="**/commentdata/" />
+			</fileset>
+		</copy>
 
-    	<get src="http://smwforum.ontoprise.com/smwforum/extensions/SMWUserManual/maintenance/cshPages.xml"
-    		dest="bin/zip/extensions/SMWUserManual/maintenance/cshPages.xml"
-    		ignoreerrors="true"
-    	/>
-    	
-        <zip destfile="bin/smwhalo-usermanual-${version}.zip" basedir="bin/zip" />
-        <delete dir="bin/zip" />
-    </target>
+		<get src="http://smwforum.ontoprise.com/smwforum/extensions/SMWUserManual/maintenance/cshPages.xml" dest="bin/zip/extensions/SMWUserManual/maintenance/cshPages.xml" ignoreerrors="true" />
+
+		<zip destfile="bin/smwhalo-usermanual.zip" basedir="bin/zip" />
+		<delete dir="bin/zip" />
+		<exec executable="php">
+			<arg value="../../../buildtools/renameDeployable.php" />
+			<arg value="../deploy.xml" />
+			<arg value="bin/smwhalo-usermanual.zip" />
+		</exec>
+	</target>
+
+	<target name="versionhint">
+		<exec executable="php">
+			<arg value="../../../buildtools/replaceVersionHint.php" />
+			<arg value="../deploy.xml" />
+			<arg value="../includes/SMW_UserManual.php" />
+		</exec>
+	</target>
 </project>
 
