add buildnumber to version string.

--- a/deploy/build.xml
+++ b/deploy/build.xml
@@ -33,6 +33,7 @@
 			<arg value="../../../buildtools/replaceVersionHint.php" />
 			<arg value="../deploy.xml" />
 			<arg value="../includes/SMW_UserManual.php" />
+            <arg value="${env.BUILD_NUMBER}" />
 		</exec>
 	</target>
 </project>
