--- a/deploy/build.xml
+++ b/deploy/build.xml
@@ -29,6 +29,7 @@
 	</target>
 
 	<target name="versionhint">
+        <property environment="env" />
 		<exec executable="php">
 			<arg value="../../../buildtools/replaceVersionHint.php" />
 			<arg value="../deploy.xml" />
